dump1090-fa (3.7.1~dev) UNRELEASED; urgency=medium

  * in development
  * Update to OpenLayers v5.3.3 and fix code compatibility.
  * Fix array out of bounds with gcc-8.
  * Fix nav_altitude and nav_heading description in README-json.
  * Bump TSV_VERSION for TAH sense fix.
  * Fix reversed sense of Track Angle / Heading bit in surface opstatus messages.
  * Some corrections to JSON doc updates. (upstream /flightaware/dump1090 commit)
  * Bump TSV_VERSION to reflect extensive comm-b changes. (upstream /flightaware/dump1090 commit)
  * Improved comm-b decoding and testing. (several upstream /flightaware/dump1090 commits)
  * Show configurable PageName also in right hand pane info block.
  * Use RTLSDR as default device type.
  * Add configuration hint for clean installation.
  * Add support and build option for bias tee.
  * Keep backward compatible with pre-2.x bladeRF versions.
  * Fix an error in the bit range used to decode CF in DF18 messages.
  * Update README-json to include and explain new fields.
  * Increase maximum TSV packet size
  * Fix possible missing \n termination of TSV messages
  * Fix column index to hide distance when site is not shown.
  * Fix getting LAT/LON from piaware .env file.
  * Add accuracy fields and tooltips for ADSB parameters in info block.

 -- Michael Wolf <michael@mictronics.de>  Thu, 02 May 2019 19:59:04 +0200

dump1090-fa (3.7.0) stable; urgency=medium

  * dump1090: Fix Rc decoding errors
  * dump1090: Compute ADS-B v0 NACp/SIL
  * dump1090: When generating aircraft.json, leave space for the final line;
    otherwise the generated json may have trailing garbage
  * dump1090: Don't update the known-address-set from DF18 messages
  * Skyview: use heading data for icon orientation if track data is unavailable
  * Bail out if rtlsdr_read_async() returns early; it probably means we lost
  * dump1090: Bail out if rtlsdr_read_async() returns early; it probably means we lost