@@ -1,6 +1,7 @@
 dump1090-fa (3.7.1~dev) UNRELEASED; urgency=medium
 
   * in development
+  * Add OpenFlightMap layer.
   * Update to OpenLayers v5.3.3 and fix code compatibility.
   * Fix array out of bounds with gcc-8.
   * Fix nav_altitude and nav_heading description in README-json.
